# performance-analytics

./: .env.template  .gitignore  README.md  docker-compose.yaml  pyproject.toml  setup.cfg
deploy/: Dockerfile
migrations/: env.py
migrations/versions/: 00001_initial_migrate.py
src/: container.py  database.py  main.py  settings.py
src/performance_analytics/: container.py  service.py  utils.py
src/performance_analytics/domain/: schemas.py
src/performance_analytics/private/: models.py  repository.py
src/performance_analytics/private/models/: __init__.py  models.py
src/performance_analytics/private/repositories/: __init__.py  base.py  repository.py
src/performance_analytics/public/: __init__.py
src/performance_analytics/public/http/: endpoints.py
